Added note about one-tailed vs. two-tailed test

--- a/Analyze_AB_test_results/Analyze_ab_test_results_notebook-submission-copy.ipynb
+++ b/Analyze_AB_test_results/Analyze_ab_test_results_notebook-submission-copy.ipynb
@@ -1513,7 +1513,9 @@
     "\n",
     "$$p_{new} - p_{old} \\neq 0 $$.\n",
     "\n",
-    "The difference is that there is no directional component to this alternative hypothesis, i.e., $p_{new}$ could be bigger than or smaller than $p_{old}$. "
+    "The difference is that there is no directional component to this alternative hypothesis, i.e., $p_{new}$ could be bigger than or smaller than $p_{old}$.\n",
+    "\n",
+    "In other words, in Part II we performed a one-tailed test whereas here (in Part 3) we have performing a two-tailed test. Please see [here](https://stats.idre.ucla.edu/other/mult-pkg/faq/general/faq-what-are-the-differences-between-one-tailed-and-two-tailed-tests) for more explanation."
    ]
   },
   {
@@ -2089,7 +2091,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
